Change CTS tests to include the support-transfer-ownership metadata in the device admin xml file.
Bug: 73750678
Test: cts-tradefed run cts-dev --module CtsDevicePolicyManagerTestCases --test com.android.cts.devicepolicy.MixedDeviceOwnerHostSideTransferTest#testTransferOwnership
Test: cts-tradefed run cts-dev --module CtsDevicePolicyManagerTestCases --test com.android.cts.devicepolicy.MixedProfileOwnerHostSideTransferTest#testTransferOwnership
Test: cts-tradefed run cts-dev --module CtsDevicePolicyManagerTestCases --test com.android.cts.devicepolicy.MixedDeviceOwnerHostSideTransferTest#testTransferOwnershipNoMetadata
Test: cts-tradefed run cts-dev --module CtsDevicePolicyManagerTestCases --test com.android.cts.devicepolicy.MixedProfileOwnerHostSideTransferTest#testTransferOwnershipNoMetadata
Change-Id: I1970b47d1d6fab5f7448e2b9ef8bf7f0d6bf85d4

Former-commit-id: d348307e7e3d5eea3477209c2d3db9dffae13e2b

--- a/tests/admin/app/res/xml/device_admin_3.xml
+++ b/tests/admin/app/res/xml/device_admin_3.xml
@@ -13,16 +13,13 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  -->
-<device-admin xmlns:android="http://schemas.android.com/apk/res/android" android:visible="false">
-    <support-transfer-ownership/>
+
+<device-admin xmlns:android="http://schemas.android.com/apk/res/android">
+    <support-transfer-ownership />
     <uses-policies>
-        <limit-password/>
-        <watch-login/>
-        <reset-password/>
-        <force-lock/>
-        <wipe-data/>
-        <expire-password/>
-        <encrypted-storage/>
-        <disable-camera/>
+        <limit-password />
+        <reset-password />
+        <wipe-data />
     </uses-policies>
 </device-admin>
+
