Added tests for virtual views using non-activity context.
Test: atest CtsAutoFillServiceTestCases:WebViewActivityTest#testAutofillOneDataset_usingAppContext \
CtsAutoFillServiceTestCases:VirtualContainerActivityTest#testAutofill_appContext\
CtsAutoFillServiceTestCases:VirtualContainerActivityCompatModeTest#testAutofill_appContext

Fixes: 74550889
Bug: 74793485

Change-Id: I6ab8da447b222be8abe56b679578d83f73781aff

--- a/tests/autofillservice/res/layout/webview_activity.xml
+++ b/tests/autofillservice/res/layout/webview_activity.xml
@@ -17,6 +17,7 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/parent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:focusable="true"
@@ -59,10 +60,5 @@
             android:layout_height="wrap_content" />
     </LinearLayout>
 
-    <android.autofillservice.cts.MyWebView
-        android:id="@+id/webview"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-    />
-
+    <!--  WebView will be dynamically added here -->
 </LinearLayout>
