--- a/tests/accessibilityservice/res/layout/end_to_end_test.xml
+++ b/tests/accessibilityservice/res/layout/end_to_end_test.xml
@@ -39,6 +39,12 @@
         <Button android:id="@+id/button"
                 android:text="@string/button_title"
                 android:accessibilityPaneTitle="@string/paneTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:bufferType="normal">
+        </Button>
+        <Button android:id="@+id/buttonWithTooltip"
+                android:text="@string/button_title"
                 android:tooltipText="@string/button_tooltip"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
