--- a/tests/tests/view/AndroidTest.xml
+++ b/tests/tests/view/AndroidTest.xml
@@ -23,5 +23,6 @@
     <test class="com.android.tradefed.testtype.AndroidJUnitTest" >
         <option name="package" value="android.view.cts" />
         <option name="runtime-hint" value="6m47s" />
+        <option name="hidden-api-checks" value="false" />
     </test>
 </configuration>
