--- a/tests/accessibilityservice/res/layout/end_to_end_test.xml
+++ b/tests/accessibilityservice/res/layout/end_to_end_test.xml
@@ -30,7 +30,8 @@
               android:text="@string/text_input_blah"
               android:layout_height="wrap_content"
               android:accessibilityHeading="true"
-              android:layout_width="fill_parent">
+              android:layout_width="fill_parent"
+              android:accessibilityTraversalAfter="@+id/buttonWithTooltip">
     </EditText>
 
     <LinearLayout android:layout_width="fill_parent"
@@ -43,12 +44,13 @@
                 android:layout_height="wrap_content"
                 android:bufferType="normal">
         </Button>
-        <Button android:id="@+id/buttonWithTooltip"
+        <Button android:id="@id/buttonWithTooltip"
                 android:text="@string/button_title"
                 android:tooltipText="@string/button_tooltip"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:bufferType="normal">
+                android:bufferType="normal"
+                android:accessibilityTraversalBefore="@id/edittext">
         </Button>
     </LinearLayout>
 
